Version 3.3.1   unreleased

    * Make changes to ModuleTabPanelView, ModuleTabView and TabLayoutPanel so replacing tabs works better.
    * Add new external GWT class CheckboxCell that can be disabled.

Version 3.3.0   27 Nov 2013

    * Update class comments on StubbedClientTest case to reflect current usage.
    * Renamed AbstractClickHandler to AbstractViewEventClickHandler for consistency.
    * Renamed the the new Simple handlers to Abstract and move to the correct .gwt.handler package.
    * Add a new AbstractClickHandler that's not a ViewEventHandler.
    * Add tests for code in .client.gwt.handler so that tests in client projects can be simpler.
    * Add new format methods to ViewDataUtils, for consistent formatting in display labels.
    * Fix BackendDataSource so that it clears any selections when refreshing a table.
    * Tweak DataTablePager to show a more sensible count ("> 10 of 10") if the final page is empty.
    * Add timezone output formats in GwtDateUtils and enhance TimeColumn and TimestampColumn to use it.

Version 3.2.0   20 Nov 2013

    * Enhance AbstractDropdownList so it's easy to set the tooltip on dropdowns.
    * Enhance DataTable to support both "standard" and "disabled" CSS styles.
    * Add new classes SimpleChangeActionHandler, SimpleRowClickActionHandler and SimpleRowClickViewEventHandler.

Version 3.1.0   18 Nov 2013

    * Add ViewDataUtils.fillLabel().
    * Enhance ViewDataUtils to accept comma-deliminated lists in string fields.
    * Enhance TabLayoutPanel and ModuleTab view to allow replacing arbitrary tabs.

Version 3.0.0   16 Nov 2013

    * Bump to 3.0.0 due to interface change.
    * Add new method GwtDateUtils.resetTimestamp().
    * Add new ViewDataUtils with utilities related to view data, especially filter criteria.
    * Add specialized typed columns (String, Integer, Date, etc.) to make client code cleaner.
    * Move all table-related widgets into their own-subpackage, because there's a lot of them now.
